# sd-flow

./: .gitignore  LICENSE  README.md  pyproject.toml  safe-install.sh
docs/: ALGORITHM.md  COMFY_INTEGRATION.md  COMIFY_INTEGRATION.md  TROUBLESHOOTING.md
examples/: example.py
integrations/comfyui/: __init__.py  flow_sampler_node.py  flow_schedule_node.py  inject.sh  remove.sh
src/sd_flow/: __init__.py  budget.py  rotating_dispatch.py  sampler.py  schedule.py  schedule_debug.py  tiers.py  utils.py
tests/: run_all.sh  test_budget.py  test_rotating_dispatch.py  test_sampler.py  test_schedule.py  test_tiers.py
tools/: find-comfyui.sh  validate-install.sh
